// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Heading /> > Default story renders snapshot 1`] = `
<h1
  class="_text_b3eba3 _text--headline-lg_b3eba3"
>
  Default Heading
</h1>
`;

exports[`<Heading /> > Heading1 story renders snapshot 1`] = `
<h1
  class="_text_b3eba3 _text--headline-lg_b3eba3"
>
  Heading 1
</h1>
`;

exports[`<Heading /> > Heading2 story renders snapshot 1`] = `
<h2
  class="_text_b3eba3 _text--headline-md_b3eba3"
>
  Heading 2
</h2>
`;

exports[`<Heading /> > Heading3 story renders snapshot 1`] = `
<h3
  class="_text_b3eba3 _text--headline-sm_b3eba3"
>
  Heading 3
</h3>
`;

exports[`<Heading /> > Heading4 story renders snapshot 1`] = `
<h4
  class="_text_b3eba3 _text--title-lg_b3eba3"
>
  Heading 4
</h4>
`;

exports[`<Heading /> > Heading5 story renders snapshot 1`] = `
<h5
  class="_text_b3eba3 _text--title-md_b3eba3"
>
  Heading 5
</h5>
`;

exports[`<Heading /> > Heading6 story renders snapshot 1`] = `
<h6
  class="_text_b3eba3 _text--title-sm_b3eba3"
>
  Heading 6
</h6>
`;

exports[`<Heading /> > UsingColorTokens story renders snapshot 1`] = `
<div>
  <h1
    class="_text_b3eba3 _text--title-md_b3eba3 text-utility-warning"
  >
    using 
    <code>
      text-utility-warning
    </code>
     utility class
  </h1>
  <h2
    class="_text_b3eba3 _text--title-md_b3eba3 text-utility-favorable"
  >
    using 
    <code>
      text-utility-favorable
    </code>
     utility class and preset override
  </h2>
  <h1
    class="_text_b3eba3 _text--title-md_b3eba3 text-utility-critical"
  >
    using 
    <code>
      text-utility-critical
    </code>
     utility class
  </h1>
  <h1
    class="_text_b3eba3 _text--title-md_b3eba3 text-[var(--eds-theme-color-text-utility-favorable)]"
  >
    using color with token in utility class and preset override
  </h1>
</div>
`;
